pgorm-query/pgorm-query-derive/tests/compile-fail/unsupported_container.rs
use pgorm_query::Iden;

#[derive(Iden)]
struct User {
    id: usize,
}

fn main() {}
